<?xml version="1.0"?>
<package>
  <name>vcg_catkin</name>
  <version>0.0.1</version> 
  <description>vcg_catkin</description>
  <maintainer email="gawela@ethz.ch">Abel Gawel</maintainer>
  <author>ASL</author>
  <license>New BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
